<resources>
    <string name="app_name">EarningApp</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_meet_you_let_s_make_your_knowledge_great">Nice to meet you! Let\'s make your knowledge great</string>
    <string name="email_id">Email Id</string>
    <string name="your_name">Your Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="age">Age</string>
    <string name="design_by_nrudera_pratap_singh">Design By\nRudera Pratap Singh</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="spin">Spin</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name_">Your Name</string>
    <string name="_100">100</string>
    <string name="category">Category</string>
    <string name="android">Android</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="swift">Swift</string>
    <string name="left_chance_1">Left Chance:1</string>
    <string name="left_chance_1_">Left Chance : 1</string>
    <string name="_1">1</string>
    <string name="left_chance">Left Chance :</string>
    <string name="earn_coin">Earn Coin</string>
    <string name="time_and_date">Time and Date</string>
    <string name="country">Country</string>
    <string name="log_out">Log Out</string>
    <string name="withdrawal_money">Withdrawal Money</string>
    <string name="total_coin">Total Coin:</string>
    <string name="_1000">1000</string>
    <string name="_1000_coin_rs_10">1000 Coin=Rs 10</string>
    <string name="minimum_60_rs_maximum_100_rs">Minimum 60 Rs Maximum 100 Rs</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_paytm_number">Enter PayTm Number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="next">Next</string>
    <string name="name">Name:</string>
    <string name="rudera_pratap_singh">Rudera Pratap Singh</string>
    <string name="email">Email:</string>
    <string name="ruderapratap7900_gmail_com">ruderapratap7900@gmail.com</string>
    <string name="password_">Password:</string>
    <string name="age_">Age:</string>
    <string name="country_">Country:</string>
    <string name="_123456">123456</string>
    <string name="_21">21</string>
    <string name="india">India</string>
    <string name="option1">option1</string>
    <string name="option4">option4</string>
    <string name="option3">option3</string>
    <string name="option2">option2</string>
    <string name="b">b).</string>
    <string name="a">a).</string>
    <string name="q1">Q1).</string>
    <string name="c">c).</string>
    <string name="d">d).</string>
    <string name="q">Q).</string>
    <string name="you_won_a_chance_to_play">You Won a Chance to Play.</string>
    <string name="sorry_you_have_lost">Sorry you have lost</string>
    <string name="_0">0</string>
</resources>