<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Activity.SplashActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        app:lottie_rawRes="@raw/money"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/open_sans_samibold"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/nice_to_meet_you_let_s_make_your_knowledge_great"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginTop="70dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/design_by_nrudera_pratap_singh"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/open_sans_light"/>

</androidx.appcompat.widget.LinearLayoutCompat>